fix contrast

--- a/_scss/_styles.scss
+++ b/_scss/_styles.scss
@@ -40,14 +40,14 @@ textarea {
 }
 
 a {
-	-moz-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-	-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-	-o-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
-	-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 	transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 	border-bottom: dotted 1px;
 	color: #49bf9d;
 	text-decoration: none;
+	section & {
+		color: #287a6b;
+		font-weight: bold;
+	}
 }
 
 a:hover {
